(BSR)[PRO] fix: hide parner button from sidenav on tablet

--- a/pro/src/app/App/layouts/BasicLayout/LateralPanel/AdminSideNav/AdminSideNav.module.scss
+++ b/pro/src/app/App/layouts/BasicLayout/LateralPanel/AdminSideNav/AdminSideNav.module.scss
@@ -23,5 +23,10 @@
 }
 
 .back-to-admin {
+  display: block;
   margin: var(--size-spacing-l) var(--size-spacing-l) 0;
+
+  @media (min-width: size.$tablet) {
+    display: none;
+  }
 }
